V2868: Pulizia e correzioni codice

--- a/Prevu.Synoptics.V2868-Termoplasticos/Pages/P020.xaml
+++ b/Prevu.Synoptics.V2868-Termoplasticos/Pages/P020.xaml
@@ -5,11 +5,10 @@
              xmlns:local="clr-namespace:Prevu.Synoptics"
              xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
-             xmlns:DCE="clr-namespace:Prevu.Drawings.Machines.DCE;assembly=Prevu.Drawings" 
              x:Class="Prevu.Synoptics.P020" mc:Ignorable="d"
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas>
-        <Labels:Pipe Width="72" StatusComponent="018-71-ECS1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="504" Canvas.Top="184" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="72" StatusComponent="018-71-ECS1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="504" Canvas.Top="184" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -19,8 +18,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="187" PipeHeight="Medium" StatusComponent="020-21-CV1" Height="30" Canvas.Left="1008" Canvas.Top="735" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="91" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="020-23-CV1" Canvas.Left="363" Canvas.Top="680">
+        <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="187" PipeHeight="Medium" StatusComponent="020-21-CV1" Canvas.Left="1008" Canvas.Top="746" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="91" RenderTransformOrigin="0.5,0.5" StatusComponent="020-23-CV1" Canvas.Left="363" Canvas.Top="680">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -30,11 +29,11 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Oil" Width="197" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="020-24-CV1" Canvas.Left="660" Canvas.Top="496"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Oil" Width="311" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="020-02-MA1" Canvas.Left="311" Canvas.Top="496"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Oil" Width="139" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="020-01-MA1" Canvas.Left="327" Canvas.Top="622"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Oil" Width="467" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="020-01-MA1" Canvas.Left="294" Canvas.Top="549"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="190" StatusComponent="020-21-CV1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="918" Canvas.Top="652">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Center" Color="Oil" Width="197" RenderTransformOrigin="0.5,0.5" StatusComponent="020-24-CV1" Canvas.Left="660" Canvas.Top="502"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Oil" Width="311" RenderTransformOrigin="0.5,0.5" StatusComponent="020-02-MA1" Canvas.Left="311" Canvas.Top="502"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Oil" Width="139" RenderTransformOrigin="0.5,0.5" StatusComponent="020-01-MA1" Canvas.Left="327" Canvas.Top="629"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Oil" Width="467" RenderTransformOrigin="0.5,0.5" StatusComponent="020-01-MA1" Canvas.Left="294" Canvas.Top="555"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="190" StatusComponent="020-21-CV1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="918" Canvas.Top="652">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -44,8 +43,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="149" StatusComponent="020-26-CV1" Color="Air" Height="6" Canvas.Left="1073" Canvas.Top="237"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="79" StatusComponent="020-26-CV1" Color="Air" Height="6" RenderTransformOrigin="0.5,0.5" Canvas.Left="1036" Canvas.Top="274">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="149" StatusComponent="020-26-CV1" Color="Air" Canvas.Left="1073" Canvas.Top="237"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="79" StatusComponent="020-26-CV1" Color="Air" RenderTransformOrigin="0.5,0.5" Canvas.Left="1036" Canvas.Top="274">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -55,7 +54,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="114" StatusComponent="018-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="955" Canvas.Top="268">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="114" StatusComponent="018-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="955" Canvas.Top="268">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -66,7 +65,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="303" StatusComponent="018-01-MA1" PipeHeight="Medium" Canvas.Left="713" Canvas.Top="215"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Oil" Width="77" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="020-01-MA1" Canvas.Left="426" Canvas.Top="586">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Oil" Width="77" RenderTransformOrigin="0.5,0.5" StatusComponent="020-01-MA1" Canvas.Left="426" Canvas.Top="592">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -81,8 +80,8 @@
         <Machines:Radar HorizontalAlignment="Left" VerticalAlignment="Center" Height="36" Width="31" Canvas.Left="1067" Canvas.Top="296"/>
         <Machines:CV_Valve_001 HorizontalAlignment="Left" VerticalAlignment="Center" Color="Air" Height="52" Width="51" RenderTransformOrigin="0.5,0.5" Canvas.Left="1210" Canvas.Top="214"/>
         <Ellipse HorizontalAlignment="Left" Height="16" Stroke="#FFBDBDBD" VerticalAlignment="Center" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" Canvas.Left="670" Canvas.Top="550"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Oil" Width="319" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="020-21-CV1" Canvas.Left="780" Canvas.Top="548"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Oil" Width="44" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="020-21-CV1" Canvas.Left="1075" Canvas.Top="528">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Oil" Width="299" RenderTransformOrigin="0.5,0.5" StatusComponent="020-21-CV1" Canvas.Left="800" Canvas.Top="555"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Oil" Width="44" RenderTransformOrigin="0.5,0.5" StatusComponent="020-21-CV1" Canvas.Left="1075" Canvas.Top="534">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -92,7 +91,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="72" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="020-25-CV1" Canvas.Left="1062" Canvas.Top="473">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="72" RenderTransformOrigin="0.5,0.5" StatusComponent="020-25-CV1" Canvas.Left="1062" Canvas.Top="479">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -102,7 +101,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="111" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="020-25-CV1" Canvas.Left="1096" Canvas.Top="439"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="111" RenderTransformOrigin="0.5,0.5" StatusComponent="020-25-CV1" Canvas.Left="1096" Canvas.Top="445"/>
         <Border BorderThickness="1" HorizontalAlignment="Left" Height="165" VerticalAlignment="Center" Width="117" Background="Gray" CornerRadius="15,15,15,15" Canvas.Left="228" Canvas.Top="483"/>
         <Rectangle HorizontalAlignment="Left" Height="41" Stroke="Black" VerticalAlignment="Center" Width="2" RenderTransformOrigin="0.5,0.5" Canvas.Left="677" Canvas.Top="558"/>
         <Machines:CV_Valve HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Height="48" Width="56" Canvas.Left="755" Canvas.Top="534"/>
@@ -145,63 +144,25 @@
                 </TransformGroup>
             </Machines:External.RenderTransform>
         </Machines:External>
-        <Labels:DeviceLabel 
-            ComponentName="018-71-ECS1" Canvas.Left="424" Canvas.Top="76" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="018-01-MA1" Canvas.Left="680" Canvas.Top="152"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="020-41-LT1" Canvas.Left="1107" Canvas.Top="270"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="020-22-CV1" Canvas.Left="546" Canvas.Top="368"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="020-21-TT1" Canvas.Left="1177" Canvas.Top="493"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="020-26-CV1" Canvas.Left="1189" Canvas.Top="169"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" Height="50" VerticalAlignment="Center" Width="90" ComponentName="020-SHREDDER" Canvas.Left="850" Canvas.Top="272"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="020-01-YA1" Canvas.Left="850" Canvas.Top="345"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="020-03-MA1" Canvas.Left="850" Canvas.Top="411"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="020-22-CV2" Canvas.Left="653" Canvas.Top="368"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="020-24-CV1" Canvas.Left="599" Canvas.Top="431"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="020-01-MA1" Canvas.Left="513" Canvas.Top="588"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="020-21-CV1" Canvas.Left="738" Canvas.Top="588"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="020-02-MA1" Canvas.Left="406" Canvas.Top="420"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="020-21-PT1" Canvas.Left="631" Canvas.Top="588"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="020-25-CV1" Canvas.Left="1177" Canvas.Top="377"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="020-23-CV1" Canvas.Left="296" Canvas.Top="716"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="020-11-R1" Canvas.Left="242" Canvas.Top="500"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="020-42-TT1" Canvas.Left="242" Canvas.Top="578"/>
-        <Labels:JumpLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            JumpFromLabel="024-01-MA1" 
-            JumpToLabel="210-01-MA1" Canvas.Left="1174" Canvas.Top="715"/>
+        <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Center" JumpFromLabel="024-01-MA1" JumpToLabel="210-01-MA1" Canvas.Left="1174" Canvas.Top="715"/>
+        <Labels:DeviceLabel ComponentName="018-71-ECS1" Canvas.Left="424" Canvas.Top="76" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="018-01-MA1" Canvas.Left="680" Canvas.Top="152"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="020-41-LT1" Canvas.Left="1107" Canvas.Top="270"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="020-22-CV1" Canvas.Left="546" Canvas.Top="368"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="020-21-TT1" Canvas.Left="1177" Canvas.Top="493"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="020-26-CV1" Canvas.Left="1189" Canvas.Top="169"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="020-SHREDDER" Canvas.Left="850" Canvas.Top="272"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="020-01-YA1" Canvas.Left="850" Canvas.Top="345"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="020-03-MA1" Canvas.Left="850" Canvas.Top="411"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="020-22-CV2" Canvas.Left="653" Canvas.Top="368"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="020-24-CV1" Canvas.Left="599" Canvas.Top="431"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="020-01-MA1" Canvas.Left="513" Canvas.Top="588"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="020-21-CV1" Canvas.Left="738" Canvas.Top="588"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="020-02-MA1" Canvas.Left="406" Canvas.Top="420"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="020-21-PT1" Canvas.Left="631" Canvas.Top="588"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="020-25-CV1" Canvas.Left="1177" Canvas.Top="377"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="020-23-CV1" Canvas.Left="296" Canvas.Top="716"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="020-11-R1" Canvas.Left="242" Canvas.Top="500"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="020-42-TT1" Canvas.Left="242" Canvas.Top="578"/>
     </Canvas>
 </UserControl>
