--- a/Prevu.Synoptics.V2868-Termoplasticos/Pages/P230.xaml
+++ b/Prevu.Synoptics.V2868-Termoplasticos/Pages/P230.xaml
@@ -7,12 +7,10 @@
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
              xmlns:lex="http://wpflocalizeextension.codeplex.com" 
              xmlns:Misc="clr-namespace:Prevu.Drawings.Machines.Misc;assembly=Prevu.Drawings" 
-             xmlns:Pits="clr-namespace:Prevu.Drawings.Machines.Pits;assembly=Prevu.Drawings" 
-             xmlns:Stirrer="clr-namespace:Prevu.Drawings.Machines.Stirrer;assembly=Prevu.Drawings" 
              x:Class="Prevu.Synoptics.P230" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas>
-        <Labels:Pipe Color="ByProduct" Width="74" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="210-22-CV1" Canvas.Left="423" Canvas.Top="427" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Color="ByProduct" Width="74" RenderTransformOrigin="0.5,0.5" StatusComponent="210-22-CV1" Canvas.Left="423" Canvas.Top="427" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform />
@@ -22,7 +20,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="ByProduct" Width="72" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="210-22-CV1" Canvas.Left="424" Canvas.Top="498" VisibilityComponent="210-22-CV1" VisibilitySignal="LS1" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Color="ByProduct" Width="72" RenderTransformOrigin="0.5,0.5" StatusComponent="210-22-CV1" Canvas.Left="424" Canvas.Top="498" VisibilityComponent="210-22-CV1" VisibilitySignal="LS1" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -32,17 +30,17 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="ByProduct" Width="78" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="210-23-CV1" Canvas.Left="421" Canvas.Top="567" VisibilityComponent="210-23-CV1" VisibilitySignal="LS1" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Color="ByProduct" Width="78" RenderTransformOrigin="0.5,0.5"  StatusComponent="210-23-CV1" Canvas.Left="421" Canvas.Top="567" VisibilityComponent="210-23-CV1" VisibilitySignal="LS1" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform />
                     <SkewTransform/>
-                    <RotateTransform Angle="90.1"/>
+                    <RotateTransform Angle="90"/>
                     <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="50" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="232-21-CV1" Canvas.Left="951" Canvas.Top="483" HorizontalAlignment="Center" VerticalAlignment="Top" />
+        <Labels:Pipe Color="Water" Width="50" RenderTransformOrigin="0.5,0.5" StatusComponent="232-21-CV1" Canvas.Left="951" Canvas.Top="488" HorizontalAlignment="Center" VerticalAlignment="Top" />
         <Labels:Pipe Color="Water" Width="116" RenderTransformOrigin="0.5,0.5" StatusComponent="232-21-CV1" Canvas.Left="895" Canvas.Top="535" Icon="Left" HorizontalAlignment="Center" VerticalAlignment="Top" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -53,7 +51,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="56" RenderTransformOrigin="0.5,0.5" StatusComponent="234-01-MA1" PipeHeight="Medium" Height="20" Canvas.Left="1105" Canvas.Top="508" HorizontalAlignment="Center" VerticalAlignment="Top" >
+        <Labels:Pipe Width="56" RenderTransformOrigin="0.5,0.5" StatusComponent="234-01-MA1" PipeHeight="Medium" Canvas.Left="1105" Canvas.Top="517" HorizontalAlignment="Center" VerticalAlignment="Top" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -73,7 +71,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="62" RenderTransformOrigin="0.5,0.5" StatusComponent="231-01-MA1" PipeHeight="Medium" Height="20" Canvas.Left="980" Canvas.Top="455" >
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="62" RenderTransformOrigin="0.5,0.5" StatusComponent="231-01-MA1" PipeHeight="Medium" Canvas.Left="980" Canvas.Top="455" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -85,7 +83,7 @@
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="144" RenderTransformOrigin="0.5,0.5" StatusComponent="230-21-CV1" Canvas.Left="927" Canvas.Top="226"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="431" RenderTransformOrigin="0.5,0.5" StatusComponent="232-21-CV1" Canvas.Left="817" Canvas.Top="725" />
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="64" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="232-21-CV1" Canvas.Left="817" Canvas.Top="427" />
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="64" RenderTransformOrigin="0.5,0.5" StatusComponent="232-21-CV1" Canvas.Left="817" Canvas.Top="432" />
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="103" RenderTransformOrigin="0.5,0.5" StatusComponent="233-01-MA1" PipeHeight="Medium" Canvas.Left="1370" Canvas.Top="753" />
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="312" RenderTransformOrigin="0.5,0.5" StatusComponent="210-02-MA1" PipeHeight="Medium" VisibilityComponent="" VisibilitySignal="" Canvas.Left="555" Canvas.Top="204"/>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="172" RenderTransformOrigin="0.5,0.5" StatusComponent="232-21-CV1" Canvas.Left="733" Canvas.Top="507" Icon="Left" >
@@ -98,7 +96,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="94" RenderTransformOrigin="0.5,0.5" StatusComponent="232-01-MA1" PipeHeight="Medium" Height="20" Canvas.Left="1210" Canvas.Top="669" >
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="94" RenderTransformOrigin="0.5,0.5" StatusComponent="232-01-MA1" PipeHeight="Medium" Canvas.Left="1210" Canvas.Top="693" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -108,7 +106,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="70" RenderTransformOrigin="0.5,0.5" StatusComponent="230-01-MA1" PipeHeight="Medium" Height="20" Canvas.Left="847" Canvas.Top="397" >
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="70" RenderTransformOrigin="0.5,0.5" StatusComponent="230-01-MA1" PipeHeight="Medium" Canvas.Left="847" Canvas.Top="397" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -120,7 +118,7 @@
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="413" RenderTransformOrigin="0.5,0.5" StatusComponent="232-21-CV1" Canvas.Left="729" Canvas.Top="600" />
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="196" RenderTransformOrigin="0.5,0.5" StatusComponent="291-01-MA1" Canvas.Left="1097" Canvas.Top="226"/>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="74" RenderTransformOrigin="0.5,0.5" StatusComponent="233-01-MA1" PipeHeight="Medium" Height="20" Canvas.Left="1338" Canvas.Top="716" >
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="74" RenderTransformOrigin="0.5,0.5" StatusComponent="233-01-MA1" PipeHeight="Medium" Canvas.Left="1338" Canvas.Top="720" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -130,7 +128,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="88" RenderTransformOrigin="0.5,0.5" StatusComponent="020-21-CV1" PipeHeight="Medium" Height="20" VisibilityComponent="" VisibilitySignal="" Canvas.Left="114" Canvas.Top="162">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="88" RenderTransformOrigin="0.5,0.5" StatusComponent="020-21-CV1" PipeHeight="Medium" VisibilityComponent="" VisibilitySignal="" Canvas.Left="114" Canvas.Top="167">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -140,7 +138,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="81" RenderTransformOrigin="0.5,0.5" StatusComponent="020-21-CV1" PipeHeight="Medium" Height="20" VisibilityComponent="" VisibilitySignal="" Canvas.Left="82" Canvas.Top="123"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="81" RenderTransformOrigin="0.5,0.5" StatusComponent="020-21-CV1" PipeHeight="Medium" VisibilityComponent="" VisibilitySignal="" Canvas.Left="82" Canvas.Top="127"/>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="282" RenderTransformOrigin="0.5,0.5" StatusComponent="210-71-ECS1" Canvas.Left="133" Canvas.Top="260" Icon="Right"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="154" RenderTransformOrigin="0.5,0.5" StatusComponent="208-01-MA1" PipeHeight="Medium" VisibilityComponent="" VisibilitySignal="" Canvas.Left="254" Canvas.Top="204"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="172" RenderTransformOrigin="0.5,0.5" StatusComponent="291-01-MA1" Canvas.Left="1117" Canvas.Top="141">
@@ -172,7 +170,7 @@
                     <ScaleTransform ScaleX="0.5" ScaleY="0.5"/>
                     <SkewTransform/>
                     <RotateTransform Angle="180"/>
-                    <TranslateTransform X="-0.5" Y="-1.95"/>
+                    <TranslateTransform />
                 </TransformGroup>
             </Machines:CV_Valve_001.RenderTransform>
         </Machines:CV_Valve_001>
@@ -198,67 +196,26 @@
         <Machines:Waste Height="60" Width="62" Canvas.Left="429" Canvas.Top="571" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_CV_ValvolaGhigliottina Canvas.Left="365" Canvas.Top="454" Height="22" Width="114" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_CV_ValvolaGhigliottina Canvas.Left="365" Canvas.Top="523" Height="22" Width="114" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:JumpLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            JumpFromLabel="230-21-CV1" 
-            JumpToLabel="291-01-MA1" Direction="Left" Canvas.Left="1267" Canvas.Top="193"/>
-        <Labels:JumpLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            JumpFromLabel="233-01-MA1" 
-            JumpToLabel="420-01-MA1" Canvas.Left="1437" Canvas.Top="724" />
-        <Labels:JumpLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            JumpFromLabel="208-01-MA1" 
-            JumpToLabel="020-SHREDDER" Canvas.Left="30" Canvas.Top="98"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="232-01-MA1" Canvas.Left="1277" Canvas.Top="514" />
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="230-01-MA1" Canvas.Left="836" Canvas.Top="208"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="231-01-MA1" Canvas.Left="1001" Canvas.Top="369" />
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="230-21-CV1" Canvas.Left="1047" Canvas.Top="157"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-		VerticalAlignment="Center" 
-		ComponentName="230-02-MA1" Canvas.Left="704" Canvas.Top="332"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="232-21-CV1" Canvas.Left="672" Canvas.Top="526" />
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-		VerticalAlignment="Center" 
-		ComponentName="230-01-YA1" Canvas.Left="704" Canvas.Top="262" />
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="233-01-MA1" Canvas.Left="1392" Canvas.Top="614" />
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="210-01-MA1" Canvas.Left="419" Canvas.Top="143"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="210-02-MA1" Canvas.Left="536" Canvas.Top="143"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="210-71-ECS1" Canvas.Left="158" Canvas.Top="288"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Center" 
-            ComponentName="208-01-MA1" Canvas.Left="235" Canvas.Top="143"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="210-71-ECS3" Canvas.Left="30" Canvas.Top="288"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="210-21-CV1" Canvas.Left="733" Canvas.Top="80"/>
-        <Labels:DeviceLabel 
-            ComponentName="234-01-MA1" Canvas.Left="1139" Canvas.Top="425" HorizontalAlignment="Center" VerticalAlignment="Top" />
-        <Labels:DeviceLabel 
-            ComponentName="210-22-CV1" Canvas.Left="489" Canvas.Top="441" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel 
-            ComponentName="210-23-CV1" Canvas.Left="489" Canvas.Top="510" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel 
-            ComponentName="210-DISCHARGE" Canvas.Left="489" Canvas.Top="576" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Center" JumpFromLabel="230-21-CV1" JumpToLabel="291-01-MA1" Direction="Left" Canvas.Left="1267" Canvas.Top="193"/>
+        <Labels:JumpLabel HorizontalAlignment="Center" VerticalAlignment="Top" JumpFromLabel="233-01-MA1" JumpToLabel="420-01-MA1" Canvas.Left="1437" Canvas.Top="724" />
+        <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Center" JumpFromLabel="208-01-MA1" JumpToLabel="020-SHREDDER" Canvas.Left="30" Canvas.Top="98"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="232-01-MA1" Canvas.Left="1277" Canvas.Top="514" />
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="230-01-MA1" Canvas.Left="836" Canvas.Top="208"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="231-01-MA1" Canvas.Left="1001" Canvas.Top="369" />
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="230-21-CV1" Canvas.Left="1047" Canvas.Top="157"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="230-02-MA1" Canvas.Left="704" Canvas.Top="332"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="232-21-CV1" Canvas.Left="672" Canvas.Top="526" />
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="230-01-YA1" Canvas.Left="704" Canvas.Top="262" />
+        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="233-01-MA1" Canvas.Left="1392" Canvas.Top="614" />
+        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="210-01-MA1" Canvas.Left="419" Canvas.Top="143"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="210-02-MA1" Canvas.Left="536" Canvas.Top="143"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="210-71-ECS1" Canvas.Left="158" Canvas.Top="288"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Center" ComponentName="208-01-MA1" Canvas.Left="235" Canvas.Top="143"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="210-71-ECS3" Canvas.Left="30" Canvas.Top="288"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="210-21-CV1" Canvas.Left="733" Canvas.Top="80"/>
+        <Labels:DeviceLabel ComponentName="234-01-MA1" Canvas.Left="1139" Canvas.Top="425" HorizontalAlignment="Center" VerticalAlignment="Top" />
+        <Labels:DeviceLabel ComponentName="210-22-CV1" Canvas.Left="489" Canvas.Top="441" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="210-23-CV1" Canvas.Left="489" Canvas.Top="510" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="210-DISCHARGE" Canvas.Left="489" Canvas.Top="576" HorizontalAlignment="Left" VerticalAlignment="Center" />
     </Canvas>
 </UserControl>
