--- a/Prevu.Synoptics.V2868-Termoplasticos/Pages/P520.xaml
+++ b/Prevu.Synoptics.V2868-Termoplasticos/Pages/P520.xaml
@@ -5,7 +5,6 @@
              xmlns:local="clr-namespace:Prevu.Synoptics"
              xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
-             xmlns:Blowers="clr-namespace:Prevu.Drawings.Machines.Blowers;assembly=Prevu.Drawings" 
              x:Class="Prevu.Synoptics.P520" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas >
@@ -64,9 +63,9 @@
         </Labels:Pipe>
         <Labels:Pipe Width="73" VerticalAlignment="Top" Canvas.Top="428" StatusComponent="524-01-MA1" PipeHeight="Medium" Canvas.Left="697" HorizontalAlignment="Center"/>
         <Labels:Pipe Width="66" VerticalAlignment="Top" Canvas.Top="428" StatusComponent="520-01-MA1" PipeHeight="Medium" Canvas.Left="610" HorizontalAlignment="Center"/>
-        <Labels:Pipe Width="290" VerticalAlignment="Center" Canvas.Top="581" StatusComponent="544-01-MA1" PipeHeight="Medium" Canvas.Left="793" Height="14" HorizontalAlignment="Left"/>
+        <Labels:Pipe Width="290" VerticalAlignment="Top" Canvas.Top="583" StatusComponent="544-01-MA1" PipeHeight="Medium" Canvas.Left="793" HorizontalAlignment="Center"/>
         <Labels:Pipe Width="58" VerticalAlignment="Top" Canvas.Top="586" StatusComponent="544-01-MA1" Canvas.Left="679" HorizontalAlignment="Center" Color="Air"/>
-        <Labels:Pipe Width="142" VisibilitySignal="" VerticalAlignment="Top" Canvas.Top="494" StatusComponent="524-01-MA1" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" Canvas.Left="694" Height="12" HorizontalAlignment="Center">
+        <Labels:Pipe Width="142" VisibilitySignal="" VerticalAlignment="Top" Canvas.Top="494" StatusComponent="524-01-MA1" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" Canvas.Left="694" HorizontalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -119,48 +118,26 @@
             </Rectangle.RenderTransform>
         </Rectangle>
         <Machines:DRY_HeatingBattery Width="66" VerticalAlignment="Top" Canvas.Top="556" Canvas.Left="634" Height="65" HorizontalAlignment="Center"/>
-        <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="664" Canvas.Top="408" Height="50" Width="50" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="953" Canvas.Top="563" Height="50" Width="50" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="914" Canvas.Top="187" Height="50" Width="50"  HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_WCE_Centrifuge Canvas.Left="414" Canvas.Top="172" HorizontalAlignment="Left" VerticalAlignment="Center" Width="222"/>
         <Machines:V01_DRY_DryerShutOff Canvas.Left="718" Canvas.Top="535" Height="71" Width="96" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-		VerticalAlignment="Center" 
-		ComponentName="520-01-MA1"  Canvas.Left="649" Canvas.Top="229"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
-		VerticalAlignment="Top" 
-		ComponentName="520-01-YA1"  Canvas.Left="649" Canvas.Top="297"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="520-22-CV1"  Canvas.Left="494" Canvas.Top="386"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="522-01-MA1"  Canvas.Left="893" Canvas.Top="125"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="520-26-CV1"  Canvas.Left="750" Canvas.Top="125"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="520-DCE"  Canvas.Left="498" Canvas.Top="125"/>
+        <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="664" Canvas.Top="408" Height="50" Width="50" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="953" Canvas.Top="563" HorizontalAlignment="Center" VerticalAlignment="Top" Height="50" Width="50"/>
+        <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="914" Canvas.Top="187" HorizontalAlignment="Center" VerticalAlignment="Top" Height="50" Width="50"/>
+        <Labels:JumpLabel HorizontalAlignment="Center" VerticalAlignment="Top" JumpFromLabel="520-01-MA1" JumpToLabel="492-01-MA1" Canvas.Left="301" Canvas.Top="36"/>
+        <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Top" JumpFromLabel="520-23-CV1" JumpToLabel="508-01-MA1" Canvas.Left="156" Canvas.Top="226"/>
+        <Labels:JumpLabel JumpFromLabel="544-01-MA1" JumpToLabel="570-01-MA1" Canvas.Left="1061" Canvas.Top="553" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:DetailsLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="520-VALVE" DetailsPageName="D520" Canvas.Left="605" Canvas.Top="125"/>
-        <Labels:JumpLabel HorizontalAlignment="Center" 
-                      VerticalAlignment="Top" 
-                      JumpFromLabel="520-01-MA1" 
-                      JumpToLabel="492-01-MA1" Canvas.Left="301" Canvas.Top="36"/>
-        <Labels:JumpLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Top" 
-            JumpFromLabel="520-23-CV1" 
-            JumpToLabel="508-01-MA1" Canvas.Left="156" Canvas.Top="226"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-		VerticalAlignment="Center" 
-		ComponentName="520-02-MA1"  Canvas.Left="756" Canvas.Top="297"/>
+        <Labels:DetailsLabel VerticalAlignment="Top" Canvas.Top="624" Canvas.Left="641" HorizontalAlignment="Center" DetailsPageName="D540" ComponentName="540-DRY"/>
+        <Labels:DetailsLabel ComponentName="520-RINSE" DetailsPageName="D520_2" Canvas.Left="340" Canvas.Top="236" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="520-01-MA1"  Canvas.Left="649" Canvas.Top="229"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="520-01-YA1"  Canvas.Left="649" Canvas.Top="297"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="520-22-CV1"  Canvas.Left="494" Canvas.Top="386"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="522-01-MA1"  Canvas.Left="893" Canvas.Top="125"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="520-26-CV1"  Canvas.Left="750" Canvas.Top="125"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="520-DCE"  Canvas.Left="498" Canvas.Top="125"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="520-02-MA1"  Canvas.Left="756" Canvas.Top="297"/>
         <Labels:DeviceLabel VerticalAlignment="Top" Canvas.Top="469"  Canvas.Left="644" HorizontalAlignment="Center" ComponentName="524-01-MA1"/>
         <Labels:DeviceLabel VerticalAlignment="Top" Canvas.Top="508" Canvas.Left="933" HorizontalAlignment="Center" ComponentName="544-01-MA1"/>
         <Labels:DeviceLabel VerticalAlignment="Top" Canvas.Top="508" Canvas.Left="811" HorizontalAlignment="Center" ComponentName="540-21-CV1" RenderTransformOrigin="0.567,0.54"/>
-        <Labels:DetailsLabel VerticalAlignment="Top" Canvas.Top="624" Canvas.Left="641" HorizontalAlignment="Center" DetailsPageName="D540" ComponentName="540-DRY"/>
-        <Labels:DetailsLabel ComponentName="520-RINSE" DetailsPageName="D520_2" Canvas.Left="340" Canvas.Top="236" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:JumpLabel 
-            JumpFromLabel="544-01-MA1" 
-            JumpToLabel="570-01-MA1" Canvas.Left="1061" Canvas.Top="553" HorizontalAlignment="Center" VerticalAlignment="Center"/>
     </Canvas>
 </UserControl>
