--- a/Prevu.Synoptics.V2868-Termoplasticos/PlantView.xaml
+++ b/Prevu.Synoptics.V2868-Termoplasticos/PlantView.xaml
@@ -7,7 +7,7 @@
              xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
              xmlns:lex="http://wpflocalizeextension.codeplex.com"
-             xmlns:Belts="clr-namespace:Prevu.Drawings.Machines.Belts;assembly=Prevu.Drawings" xmlns:Separation="clr-namespace:Prevu.Drawings.Machines.Separation;assembly=Prevu.Drawings" xmlns:Stirrer="clr-namespace:Prevu.Drawings.Machines.Stirrer;assembly=Prevu.Drawings" xmlns:FiltroPressa="clr-namespace:Prevu.Drawings.Machines.FiltroPressa;assembly=Prevu.Drawings" x:Class="Prevu.Synoptics.PlantView"
+             x:Class="Prevu.Synoptics.PlantView"
              lex:ResxLocalizationProvider.DefaultAssembly="Prevu.Localization"
              lex:ResxLocalizationProvider.DefaultDictionary="Resources"             
              mc:Ignorable="d" d:Background="{DynamicResource MaterialDesignPaper}">
@@ -161,7 +161,6 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-
         <Machines:QX_HMI Height="82" Width="74" Canvas.Left="391" Canvas.Top="750" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Machines:QX_LongElectricalCabinet Width="188" Height="76" Canvas.Left="2432" Canvas.Top="769" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Center">
             <Machines:QX_LongElectricalCabinet.RenderTransform>
@@ -209,8 +208,6 @@
         <Machines:DRY_HeatingBattery Width="66" Canvas.Top="657" Canvas.Left="1935" Height="64" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Machines:PR_Prerompitore Width="204" Height="208" Canvas.Left="286" Canvas.Top="243" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Machines:V01_NT_NastroBuffer Canvas.Left="2221" Canvas.Top="587" Width="121" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-
-
         <Machines:QX_LongElectricalCabinet Width="188" Height="76" Canvas.Left="1" Canvas.Top="325" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Center">
             <Machines:QX_LongElectricalCabinet.RenderTransform>
                 <TransformGroup>
@@ -221,6 +218,15 @@
                 </TransformGroup>
             </Machines:QX_LongElectricalCabinet.RenderTransform>
         </Machines:QX_LongElectricalCabinet>
+        <Machines:V01_STCN_PrewashReactor_w1Screw_ExtrctionBelt Canvas.Left="646" Canvas.Top="110" Height="167" Width="136" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:NT_ConveyorBelt Canvas.Left="215" Canvas.Top="159"/>
+        <Machines:V01_MU_Grinder Canvas.Left="795" Canvas.Top="259" Height="166" Width="165" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_VSP_SepTank_w7Paddles_4Distributor Canvas.Left="1134" Canvas.Top="378" Height="199" Width="294" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_FP_FiltroPressa_wFeederScrew Canvas.Left="1508" Canvas.Top="233" Height="233" Width="189" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_FP_FiltroPressa_wFeederScrew Canvas.Left="1508" Canvas.Top="452" Height="233" Width="189" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_WCE_Centrifuge Canvas.Left="1839" Canvas.Top="235" Height="140" Width="143" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_WCE_Centrifuge Canvas.Left="1839" Canvas.Top="508" Height="140" Width="143" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:External Height="30" Width="25" RenderTransformOrigin="0.5,0.5" Canvas.Left="2401" Canvas.Top="572" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:DeviceLabel x:Name="Q41" ComponentName="Q41" Canvas.Left="50" Canvas.Top="523"/>
         <Labels:DeviceLabel x:Name="Q71" ComponentName="Q71" Canvas.Left="2481" Canvas.Top="341"/>
         <Labels:DeviceLabel x:Name="Q72" ComponentName="Q72" Canvas.Left="2481" Canvas.Top="649"/>
@@ -252,19 +258,10 @@
                 </TransformGroup>
             </Rectangle.RenderTransform>
         </Rectangle>
-        <Machines:External Height="30" Width="25" RenderTransformOrigin="0.5,0.5" Canvas.Left="2401" Canvas.Top="572" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Rectangle Stroke="Black" RadiusX="15" RadiusY="15" StrokeThickness="3" StrokeDashArray="2 2" Height="400"  Width="364" Canvas.Left="174" Canvas.Top="92" HorizontalAlignment="Center" VerticalAlignment="Center" d:IsLocked="True"/>
         <Rectangle Stroke="Black" RadiusX="15" RadiusY="15" StrokeThickness="3" StrokeDashArray="2 2" Height="400"  Width="423" Canvas.Left="610" Canvas.Top="92" HorizontalAlignment="Center" VerticalAlignment="Center" d:IsLocked="True"/>
         <Rectangle Stroke="Black" RadiusX="15" RadiusY="15" StrokeThickness="3" StrokeDashArray="2 2" Height="520"  Width="679" Canvas.Left="1087" Canvas.Top="212" HorizontalAlignment="Center" VerticalAlignment="Center" d:IsLocked="True"/>
         <Rectangle Stroke="Black" RadiusX="15" RadiusY="15" StrokeThickness="3" StrokeDashArray="2 2" Height="520"  Width="643" Canvas.Left="1809" Canvas.Top="212" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
-        <Machines:V01_STCN_PrewashReactor_w1Screw_ExtrctionBelt Canvas.Left="646" Canvas.Top="110" Height="167" Width="136" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:NT_ConveyorBelt Canvas.Left="215" Canvas.Top="159"/>
-        <Machines:V01_MU_Grinder Canvas.Left="795" Canvas.Top="259" Height="166" Width="165" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:V01_VSP_SepTank_w7Paddles_4Distributor Canvas.Left="1134" Canvas.Top="378" Height="199" Width="294" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:V01_FP_FiltroPressa_wFeederScrew Canvas.Left="1508" Canvas.Top="233" Height="233" Width="189" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:V01_FP_FiltroPressa_wFeederScrew Canvas.Left="1508" Canvas.Top="452" Height="233" Width="189" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:V01_WCE_Centrifuge Canvas.Left="1839" Canvas.Top="235" Height="140" Width="143" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:V01_WCE_Centrifuge Canvas.Left="1839" Canvas.Top="508" Height="140" Width="143" HorizontalAlignment="Center" VerticalAlignment="Top"/>
 
     </Canvas>
 </UserControl>
