--- a/Prevu.Synoptics.V2868-Termoplasticos/Pages/P288.xaml
+++ b/Prevu.Synoptics.V2868-Termoplasticos/Pages/P288.xaml
@@ -5,9 +5,7 @@
              xmlns:local="clr-namespace:Prevu.Synoptics"
              xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
-             xmlns:DCE="clr-namespace:Prevu.Drawings.Machines.DCE;assembly=Prevu.Drawings" 
              xmlns:Misc="clr-namespace:Prevu.Drawings.Machines.Misc;assembly=Prevu.Drawings" 
-             xmlns:Pits="clr-namespace:Prevu.Drawings.Machines.Pits;assembly=Prevu.Drawings" 
              xmlns:lex="http://wpflocalizeextension.codeplex.com" 
              x:Class="Prevu.Synoptics.P288" mc:Ignorable="d"
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
@@ -25,8 +23,8 @@
         <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="149" StatusComponent="285-01-MA1" Color="Water" Canvas.Left="881" Canvas.Top="336" HorizontalAlignment="Center" VerticalAlignment="Top" />
         <Labels:Pipe Color="Water" Width="260" RenderTransformOrigin="0.5,0.5"  StatusComponent="291-01-MA1" Canvas.Left="1162" Canvas.Top="402" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="256" RenderTransformOrigin="0.5,0.5"  StatusComponent="293-01-MA1" Canvas.Left="1135" Canvas.Top="556"/>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="49" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="288-21-CV1" Canvas.Left="1047" Canvas.Top="243"/>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="104" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="288-21-CV1" Canvas.Left="1042" Canvas.Top="293">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="49" RenderTransformOrigin="0.5,0.5" StatusComponent="288-21-CV1" Canvas.Left="1047" Canvas.Top="249"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="104" RenderTransformOrigin="0.5,0.5" StatusComponent="288-21-CV1" Canvas.Left="1042" Canvas.Top="299">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -36,7 +34,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="110" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="457-01-MA1" Canvas.Left="587" Canvas.Top="144">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="110" RenderTransformOrigin="0.5,0.5" StatusComponent="457-01-MA1" Canvas.Left="587" Canvas.Top="149">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -46,7 +44,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="188" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="457-01-MA1" Canvas.Left="456" Canvas.Top="91"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="188" RenderTransformOrigin="0.5,0.5" StatusComponent="457-01-MA1" Canvas.Left="456" Canvas.Top="97"/>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="377" StatusComponent="298-01-MA1" Color="Water" Canvas.Left="220" Canvas.Top="163"/>
         <Labels:Pipe Color="Water" Width="63" StatusComponent="286-21-CV1" RenderTransformOrigin="0.5,0.5" Canvas.Left="554" Canvas.Top="486" HorizontalAlignment="Center" VerticalAlignment="Top" />
         <Labels:Pipe Color="Water" Width="142" RenderTransformOrigin="0.5,0.5" StatusComponent="286-01-MA1" Canvas.Left="587" Canvas.Top="576" Icon="Right" HorizontalAlignment="Center" VerticalAlignment="Top" >
@@ -127,9 +125,9 @@
         <Machines:WaterPump HorizontalAlignment="Center" VerticalAlignment="Top" Height="44" Width="45" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="200" Canvas.Top="730">
             <Machines:WaterPump.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform ScaleX="-1"/>
+                    <ScaleTransform/>
                     <SkewTransform/>
-                    <RotateTransform Angle="90"/>
+                    <RotateTransform Angle="-90"/>
                     <TranslateTransform/>
                 </TransformGroup>
             </Machines:WaterPump.RenderTransform>
@@ -145,16 +143,14 @@
             </Rectangle.RenderTransform>
         </Rectangle>
         <Machines:External HorizontalAlignment="Center" VerticalAlignment="Top" Height="58" Width="60" RenderTransformOrigin="0.5,0.5" Canvas.Left="1360" Canvas.Top="465"/>
-        <TextBlock TextWrapping="Wrap" 
-            Height="66" Width="138" TextAlignment="Center" 
-            FontSize="20" Foreground="White" Text="{lex:Loc DRAINAGE SYSTEM}" Canvas.Left="257" Canvas.Top="570" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <TextBlock TextWrapping="Wrap" Height="66" Width="138" TextAlignment="Center" FontSize="20" Foreground="White" Text="{lex:Loc DRAINAGE SYSTEM}" Canvas.Left="257" Canvas.Top="570" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:CV_Valve_001 Height="100" Width="100" Color="Water" RenderTransformOrigin="0.51,0.539" Canvas.Left="484" Canvas.Top="439" HorizontalAlignment="Center" VerticalAlignment="Top" >
             <Machines:CV_Valve_001.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="-0.5" ScaleY="0.5"/>
                     <SkewTransform/>
                     <RotateTransform/>
-                    <TranslateTransform X="-0.5" Y="-1.95"/>
+                    <TranslateTransform />
                 </TransformGroup>
             </Machines:CV_Valve_001.RenderTransform>
         </Machines:CV_Valve_001>
@@ -164,91 +160,36 @@
                     <ScaleTransform ScaleX="-0.5" ScaleY="0.5"/>
                     <SkewTransform/>
                     <RotateTransform/>
-                    <TranslateTransform X="-0.5" Y="-1.95"/>
+                    <TranslateTransform />
                 </TransformGroup>
             </Machines:CV_Valve_001.RenderTransform>
         </Machines:CV_Valve_001>
         <Machines:Waste Height="46" Width="44" Canvas.Left="701" Canvas.Top="217" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Rectangle Height="84" Width="102" Fill="Gray" RadiusX="15" RadiusY="15" Canvas.Left="606" Canvas.Top="642" HorizontalAlignment="Center" VerticalAlignment="Top" />
-        <Machines:WaterPump Height="70" Width="50" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="633" Canvas.Top="649" HorizontalAlignment="Center" VerticalAlignment="Top" >
-            <Machines:WaterPump.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="-1"/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="-180"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:WaterPump.RenderTransform>
-        </Machines:WaterPump>
+        <Machines:WaterPump Height="70" Width="50" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="633" Canvas.Top="649" HorizontalAlignment="Center" VerticalAlignment="Top" />
         <Machines:V01_SCW_Screw_wHopper Canvas.Left="552" Canvas.Top="126" RenderTransformOrigin="0.5,0.5" Width="203" HorizontalAlignment="Center" VerticalAlignment="Top" Height="172"/>
         <Machines:V01_RTF_Microfilter Canvas.Left="594" Canvas.Top="398" Height="132" Width="145" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:WaterPump Height="54" Width="50" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="1273" Canvas.Top="377" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_DCT_Decanter Canvas.Left="993" Canvas.Top="323" Height="350" Width="219" ComponentName="288-41-LT1" TrendName="LEVEL" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Rectangle Height="35" Stroke="Black" Width="2" Canvas.Left="694" Canvas.Top="629" HorizontalAlignment="Center" VerticalAlignment="Top" />
-        <Labels:JumpLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            JumpFromLabel="291-01-MA1" 
-            JumpToLabel="230-21-CV1" Canvas.Left="1403" Canvas.Top="370"/>
-        <Labels:JumpLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            JumpFromLabel="283-01-MA1" 
-            JumpToLabel="457-01-MA1" Canvas.Left="404" Canvas.Top="64"/>
+        <Labels:JumpLabel HorizontalAlignment="Center" VerticalAlignment="Top" JumpFromLabel="291-01-MA1" JumpToLabel="230-21-CV1" Canvas.Left="1403" Canvas.Top="370"/>
+        <Labels:JumpLabel HorizontalAlignment="Center" VerticalAlignment="Top" JumpFromLabel="283-01-MA1" JumpToLabel="457-01-MA1" Canvas.Left="404" Canvas.Top="64"/>
         <Labels:DetailsLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="298-VIEW" DetailsPageName="D298" HideComponentName="True" Canvas.Left="161" Canvas.Top="606"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="288-21-CV1" Canvas.Left="919" Canvas.Top="227"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="293-01-MA1" Canvas.Left="1253" Canvas.Top="477"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="293-71-ECS2" Canvas.Left="1413" Canvas.Top="535"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="298-01-MA1" Canvas.Left="90" Canvas.Top="726"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="298-61-LEV" Canvas.Left="65" Canvas.Top="606"/>
-        <Labels:DeviceLabel 
-        ComponentName="283-01-MA1" Canvas.Left="740" Canvas.Top="78" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel 
-        ComponentName="286-21-CV2" RenderTransformOrigin="0.5,0.5" Canvas.Left="417" Canvas.Top="480" HorizontalAlignment="Center" VerticalAlignment="Top" />
-        <Labels:DeviceLabel 
-        ComponentName="286-41-LT1" Canvas.Left="621" Canvas.Top="483" HorizontalAlignment="Center" VerticalAlignment="Top" />
-        <Labels:DeviceLabel 
-        ComponentName="286-01-MA1" Canvas.Left="641" Canvas.Top="344" Width="92" HorizontalAlignment="Center" VerticalAlignment="Top" />
-        <Labels:DeviceLabel 
-        ComponentName="286-21-CV1" RenderTransformOrigin="0.5,0.5" Canvas.Left="417" Canvas.Top="413" HorizontalAlignment="Center" VerticalAlignment="Top" />
-        <Labels:DeviceLabel 
-        ComponentName="285-01-MA1" Canvas.Left="510" Canvas.Top="659" HorizontalAlignment="Center" VerticalAlignment="Top" />
-        <Labels:DeviceLabel 
-        ComponentName="285-61-LS1" Canvas.Left="684" Canvas.Top="589" HorizontalAlignment="Center" VerticalAlignment="Top" />
-        <Labels:DeviceLabel 
-        ComponentName="286-MICROFILT" Canvas.Left="514" Canvas.Top="343" HorizontalAlignment="Center" VerticalAlignment="Top" />
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="288-41-LT1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1058" Canvas.Top="413">
-            <Labels:DeviceLabel.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:DeviceLabel.RenderTransform>
-        </Labels:DeviceLabel>
-        <Labels:DeviceLabel 
-            ComponentName="288-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1058" Canvas.Top="338" HorizontalAlignment="Center" VerticalAlignment="Top">
-            <Labels:DeviceLabel.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:DeviceLabel.RenderTransform>
-        </Labels:DeviceLabel>
-        <Labels:DeviceLabel 
-            ComponentName="291-01-MA1" Canvas.Left="1253" Canvas.Top="323" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="288-21-CV1" Canvas.Left="919" Canvas.Top="227"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="293-01-MA1" Canvas.Left="1253" Canvas.Top="477"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="293-71-ECS2" Canvas.Left="1413" Canvas.Top="535"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="298-01-MA1" Canvas.Left="90" Canvas.Top="726"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="298-61-LEV" Canvas.Left="65" Canvas.Top="606"/>
+        <Labels:DeviceLabel ComponentName="283-01-MA1" Canvas.Left="740" Canvas.Top="78" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="286-21-CV2" RenderTransformOrigin="0.5,0.5" Canvas.Left="417" Canvas.Top="480" HorizontalAlignment="Center" VerticalAlignment="Top" />
+        <Labels:DeviceLabel ComponentName="286-41-LT1" Canvas.Left="621" Canvas.Top="483" HorizontalAlignment="Center" VerticalAlignment="Top" />
+        <Labels:DeviceLabel ComponentName="286-01-MA1" Canvas.Left="641" Canvas.Top="344" Width="92" HorizontalAlignment="Center" VerticalAlignment="Top" />
+        <Labels:DeviceLabel ComponentName="286-21-CV1" RenderTransformOrigin="0.5,0.5" Canvas.Left="417" Canvas.Top="413" HorizontalAlignment="Center" VerticalAlignment="Top" />
+        <Labels:DeviceLabel ComponentName="285-01-MA1" Canvas.Left="510" Canvas.Top="659" HorizontalAlignment="Center" VerticalAlignment="Top" />
+        <Labels:DeviceLabel ComponentName="285-61-LS1" Canvas.Left="684" Canvas.Top="589" HorizontalAlignment="Center" VerticalAlignment="Top" />
+        <Labels:DeviceLabel ComponentName="286-MICROFILT" Canvas.Left="514" Canvas.Top="343" HorizontalAlignment="Center" VerticalAlignment="Top" />
+        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="288-41-LT1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1058" Canvas.Top="413"/>
+        <Labels:DeviceLabel ComponentName="288-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1058" Canvas.Top="338" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="291-01-MA1" Canvas.Left="1253" Canvas.Top="323" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     </Canvas>
 </UserControl>
